# phoneme-navigator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.backend  README.md  docker-compose.gpu.yml  docker-compose.yml  ideas.md  kokoro_phoneme_navigator_demo.ipynb  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  chrome-kaleido  devcontainer.json  install_uv.sh  post-create.sh
.github/workflows/: pytest.yml
docs/: ideas.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  styles.css
notebooks/: README.md  example_notebook.ipynb
scripts/: check_kokoro.sh  run_backend.sh  run_frontend.sh  tail_logs.sh
src/phoneme_navigator/: __init__.py  project_path.py
src/phoneme_navigator/api/: app.py  dependencies.py  routes.py
src/phoneme_navigator/clients/: __init__.py  kokoro_client.py
src/phoneme_navigator/core/: __init__.py  config.py  logging.py
src/phoneme_navigator/domain/: __init__.py  edits.py  neighbourhoods.py  tokenization.py
src/phoneme_navigator/models/: __init__.py  phonemes.py  requests.py  responses.py
src/phoneme_navigator/services/: __init__.py  navigation_service.py  phonemize_service.py  spectrogram_service.py  synthesis_service.py
src/python_template/: utilities.py
tests/: test_api_routes.py  test_config.py  test_logging.py  test_tokenization.py  test_utilities.py
