[project]
name = "phoneme-navigator"
version = "0.1.0"
description = "Notebook-to-web scaffold for a phoneme space navigator."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "numpy>=2.3.4,<3.0.0",
    "scipy==1.16.2",
    "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.0.1,<8.0.0",
    "ipywidgets==8.1.7",
    "jupyterlab-widgets==3.0.15",
    "lmfit>=1.3.4,<2.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "plotly>=6.3.1,<7.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov==4.1.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "black[jupyter]==25.9.0",
    "isort==7.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "nbstripout-fast>=1.0,<1.1",
    "nbdime>=4.0.2,<5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phoneme_navigator", "python_template"]

[tool.isort]
profile = "black"
